WIP - most buttons now working. Need to evaluate the condition testing.

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
@@ -386,11 +386,13 @@
                     tabNumber = GetTabNumber(tabName);
                     console.log("Setup for tab " + tabName);
                     setupButtonsForTab(tabNumber);
+                    formContext.Arup.OnDisplayingTab(formContext, tabName,
+                        function() {
+                            setupButtonsForTab(tabNumber);
+                        });
                 }
             }
         }
-
-
 </script>
 </body>
 </html>
