--- a/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
@@ -73,68 +73,90 @@
     <div id="tabButtons"></div>
 
 <script>
+    // Static form context value to be used throughout the page.
     var formContext = parent.Xrm.Page;
 
+    // Go back to the previous tab.
     function ReturnToActiveTab() {
         var previousTab = formContext.Arup.PreviousTab;
         DisplayTab(previousTab);
     }
 
+    function DisplayTab(newTabName) {
+        console.log("Display tab:" + newTabName);
+        formContext.Arup.PreviousTab = tabName;
+        Xrm.Page.Arup.DisplayTab(newTabName, formContext);
+    }
+
+    // Move to next step in BPF
     function MoveNext() {
-        formContext.Arup.BPFMoveNext(formContext, function() {
-            setupNavigationButtons( true );
+        formContext.Arup.BPFMoveNext(formContext, function () {
+            setupNavigationButtons(true);
         });
     }
 
-    // This seems problematic - 
-    function DisplayTab(tabName) {
-        console.log("Display tab:" + tabName);
-        formContext.Arup.PreviousTab = tabName;
-        tabToDisplay = Xrm.Page.Arup.displayTab(tabName, formContext);
-    }
+    //function setupNavigationButtonsForStage(setFromStage) {
+    //    // And the active BPF stage
+    //    activeStageName = formContext.data.process.getActiveStage();
+    //    activeStageName = activeStageName == null ? null : activeStageName.getName();
+    //    activeStageName = formContext.Arup.stageToTabMapping[activeStageName];
+
+    //    // Decide which tabs should be visible.
+    //    activeTab = setVisibleTabs(staticTabs.concat([activeStageName]));
+    //    if (activeTab != null) {
+    //        activeTabName = Xrm.Page.ui.tabs.get()[activeTab].getName();
+    //    } else {
+    //        activeTabName= tabToDisplay;
+    //    }
+
+    //    Log("Active tab name:  " + activeTabName);
+    //    if (setFromStage) {
+    //        setupButtonsForTab(GetTabNumber(activeStageName));
+    //    } else {
+    //        setupButtonsForTab(activeTab);
+    //    }
+    //}
 
     // Get tab number from tab name.
-    function GetTabNumber( tabName ) {
-        var tabs = formContext.ui.tabs.get();
-        var tabNum;
-        for (var t in tabs) {
-            var tab = tabs[t];
-            if (tab.getName() == tabName) {
-                tabNum = t;
-            }
-        }
-        return tabNum;
-    }
+    //function GetTabNumber( tabName ) {
+    //    var tabs = formContext.ui.tabs.get();
+    //    var tabNum = null;
+    //    for (var t in tabs) {
+    //        var tab = tabs[t];
+    //        if (tab.getName() == tabName) {
+    //            tabNum = t;
+    //        }
+    //    }
+    //    return tabNum;
+    //}
 
-    function setVisibleTabs(tabList) {
-        var tabs = formContext.ui.tabs.get();
-        tabToDisplay = null;
-        for (var t in tabs) {
-            var tab = tabs[t];
-            var tabName = tab.getName();
-            if (tab.getDisplayState() == "expanded") {
-                activeTab = t;
-            } else {
-                if (tabList.indexOf(tabName) > -1) {
-                    tab.setVisible(true);
-                } else {
-                    tab.setVisible(false);
-                }
-            }
+    //function setVisibleTabs(tabList) {
+    //    var tabs = formContext.ui.tabs.get();
+    //    tabToDisplay = null;
+    //    for (var t in tabs) {
+    //        var tab = tabs[t];
+    //        var tabName = tab.getName();
+    //        if (tab.getDisplayState() == "expanded") {
+    //            activeTab = t;
+    //        } else {
+    //            if (tabList.indexOf(tabName) > -1) {
+    //                tab.setVisible(true);
+    //            } else {
+    //                tab.setVisible(false);
+    //            }
+    //        }
+    //    }
 
-            // If (testing) add buttons linking to all of the tabs to the test tab.
-        }
+    //    return activeTab != null ? parseInt(activeTab) : null;
+    //};
 
-        return activeTab != null ? parseInt(activeTab) : null;
-    };
-
-    function setupButtonsForTab(activeTab) {
-        console.log("Display buttons for " + activeTab);
+    function setupButtonsForTab(activeTabNum) {
+        console.log("Display buttons for " + activeTabNum);
         var tabs = formContext.ui.tabs.get();
         // - generate buttons appropriate to the active tab.
-        if (activeTab != null) {
-            var buttonConfig = buttonConfigs[tabs[activeTab].getName()];
-            Log("Active tab name " + tabs[activeTab].getName());
+        if (activeTabNum != null) {
+            var buttonConfig = buttonConfigs[tabs[activeTabNum].getName()];
+            Log("Active tab name " + tabs[activeTabNum].getName());
             if (buttonConfigs != null) {
                 // Generate buttons listed in buttonConfig.
                 $("#tabButtons").empty();
@@ -270,7 +292,7 @@
                 'action': function() {
                     ReturnToActiveTab();
                 },
-                hidden: f => formContext.Arup.PreviousTab == null
+                hidden: f => formContext.Arup.PreviousTab == null || formContext.Arup.PreviousTab == 'PJN_Costs_Tab'
             }
         ],
         'Project_Financials_Tab': [
@@ -278,7 +300,8 @@
                 'label': 'Return to: Required Fields - Developing Bid tab',
                 'action': function() {
                     ReturnToActiveTab();
-                }
+                },
+                hidden: f => formContext.Arup.PreviousTab == null || formContext.Arup.PreviousTab == 'Project_Financials_Tab'
             }
         ],
         'PJN_Approval_tab': [
@@ -311,88 +334,32 @@
         ]
     };
 
-    staticTabs = [
-        'PJN_Costs_Tab', 'Summary', 'Project_Financials_Tab', 'Project_Details_Tab',
-        'Bid_Details_Tab', 'Bid_Development_Tab_External'
-    ];
+    //staticTabs = [
+    //    'PJN_Costs_Tab', 'Summary', 'Project_Financials_Tab', 'Project_Details_Tab',
+    //    'Bid_Details_Tab', 'Bid_Development_Tab_External'
+    //];
 
-    var tabToDisplay = null;
-    var activeStageName;
-    var activeTab;
-    var activeTabName;
-
-    function setupNavigationButtons(setFromStage) {
-        // And the active BPF stage
-        activeStageName = formContext.data.process.getActiveStage();
-        activeStageName = activeStageName == null ? null : activeStageName.getName();
-        activeStageName = formContext.Arup.stageToTabMapping[activeStageName];
-
-        // Decide which tabs should be visible.
-        activeTab = setVisibleTabs(staticTabs.concat([activeStageName]));
-        if (activeTab != null) {
-            activeTabName = Xrm.Page.ui.tabs.get()[activeTab].getName();
-        } else {
-            activeTabName= tabToDisplay;
-        }
-
-        Log("Active tab name:  " + activeTabName);
-        if (setFromStage) {
-            setupButtonsForTab(GetTabNumber(activeStageName));
-        } else {
-            setupButtonsForTab(activeTab);
-        }
-    }
-
-    // Called from onStateChange anyway
-    //setupNavigationButtons(true);
-
-    //console.log(" oppo button web resource loaded for: " + activeTabName + " on stage name: " + activeStageName);
-    //formContext.Arup.AddTabChangeCallback( formContext, function(e) {
-    //    var source = e.getEventSource();
-    //    if (source.getDisplayState() == "expanded") {
-    //        var tabName = source.getName();
-    //        console.log("Tab expanded :" + tabName);
-    //        setupButtonsForTab(GetTabNumber(tabName));
-    //    }
-    //});
-
-
-            //var thisTab;
-            //var thisTabName;
-            //var tabs = formContext.ui.tabs.get();
-            //tabToDisplay = null;
-            //for (var t in tabs) {
-            //    var tab = tabs[t];
-            //    var tabName = tab.getName();
-            //    if (tab.getDisplayState() == "expanded") {
-            //        thisTab = t;
-            //        console.log("Active tab is " + t);
-            //        thisTabName = tabName;
-            //    }
-            //}
-
-            ////the event occurred
-            //setupButtonsForTab(thisTab);
-
-            //var tabName;
+ 
+    //var tabName;
     var tabName;
     var tabNumber;
-        document.onreadystatechange = function() {
-            if (document.readyState == "complete") {
-                if (location.search == "") {
-                    console.error("No tab name given");
-                } else {
-                    tabName = location.search.split("=")[1];
-                    tabNumber = GetTabNumber(tabName);
-                    console.log("Setup for tab " + tabName);
-                    setupButtonsForTab(tabNumber);
-                    formContext.Arup.OnDisplayingTab(formContext, tabName,
-                        function() {
-                            setupButtonsForTab(tabNumber);
-                        });
-                }
+    document.onreadystatechange = function() {
+        if (document.readyState == "complete") {
+            if (location.search == "") {
+                console.error("No tab name given");
+            } else {
+                // Tab number is specified as part of the data argument to the web resource.
+                tabName = location.search.split("=")[1];
+                tabNumber = formContext.Arup.GetTabNumber(formContext, tabName);
+                console.log("Setup for tab " + tabName);
+                setupButtonsForTab(tabNumber);
+                formContext.Arup.OnDisplayingTab(formContext, tabName,
+                    function() {
+                        setupButtonsForTab(tabNumber);
+                    });
             }
         }
+    }
 </script>
 </body>
 </html>
