--- a/CrmPackage/WebResources/Web Page (HTML)/ccrm_homepage.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/ccrm_homepage.html
@@ -161,10 +161,10 @@
             <a class="link" onclick="LoadUrl('/_root/homepage.aspx?etc=4&amp;sitemappath=Workplace%7CMyWork%7Cnav_leads');">
                 <p>Create or update a Lead</p>
             </a>
-			<div class="twoheader">
+            <div class="twoheader">
                 <h2>Manage My Subscriptions</h2>
             </div>
-            <a class="link" onclick= _openWebResource("arup_MySubHTML");>
+            <a class="link" onclick=_openWebResource("arup_MySubHTML");>
                 <p>My Subscriptions Wizard</p>
             </a>
         </div>
@@ -172,6 +172,9 @@
             <div class="header">
                 <h2>Manage Bids</h2>
             </div>
+            <a class="link" onclick=_openWebResource("arup_OppoWiz.html");>
+                <p>Opportunity Wizard</p>
+            </a>
             <a class="link" onclick="LoadUrl('/_root/homepage.aspx?etc=3&amp;sitemappath=Workplace%7CMyWork%7Copportunity');">
                 <p>Create or update an Opportunity</p>
             </a>
