WIP - creating opportunities using impersonated account. Many of the autocomplete fields are fragile. #75087

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -428,13 +428,13 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="project_country">Project Country:</label>
-                        <input list="countries" id="project_country" class="form-control input-form" name="project_country" onkeyup="getCountries(this.value);" onchange="getStates();" title="Input project country" autocomplete="countries"/>
+                        <input list="countries" id="project_country" class="form-control input-form" name="project_country" onkeyup="getCountries(this.value);" onchange="getStates();" title="Input project country" autocomplete="new-password"/>
                         <datalist id="countries">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="project_state">Project State/Province:</label>
-                        <input list="states" id="project_state" class="form-control input-form" name="project_state" title="Input project state" autocomplete="state-province"/>
+                        <input list="states" id="project_state" class="form-control input-form" name="project_state" title="Input project state" autocomplete="new-password"/>
                         <datalist id="states">
                         </datalist>
                     </div>
