--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -15,15 +15,13 @@
     <link rel="stylesheet" href="arup_OppoWiz.css">
     <link rel="stylesheet" href="arup_Bootstrap_TableCSS">
     <link rel="stylesheet" href="arup_Bootstrap_MultiselectCSS">
-    <!--<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/css/autoComplete.min.css">
     <script type="text/javascript" src="ccrm_/JavaScripts/Lib/jquery_3.2.0.min"></script>
     <script type="text/javascript" src="arup_BootStrap.min"></script>
     <script type="text/javascript" src="arup_Bootstrap_TableJS"></script>
     <script type="text/javascript" src="arup_Bootstrap_MultiselectJS"></script>
-<script type="text/javascript" src="arup_OppoWiz.js"></script>
-<script type="text/javascript" src="arup_OppoWizValidate.js"></script>
-<!--<script type="text/javascript" src="arup_OppoWiz.MSWorkerClass.js"></script>-->
+    <script type="text/javascript" src="arup_OppoWiz.js"></script>
+    <script type="text/javascript" src="arup_OppoWizValidate.js"></script>
     <script type="text/javascript" src="mag_/js/alert.js"></script>
     <script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <script src="arup_SDK.WebAPI_min.js" type="text/javascript"></script>
@@ -56,8 +54,11 @@
                                 });
                             Xrm.Utility.showProgressIndicator("Creating Opportunity");
                         },
-                        function(fail) {
-                            alert("Failed to validate");
+                        function (errors) {
+                            Xrm.Navigation.openErrorDialog({
+                                message: "Correct the form and try again",
+                                details: string.join("\r\n", errors)
+                            });
                         }
                     );
                 }
