--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -26,8 +26,9 @@
     <script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <script src="arup_SDK.WebAPI_min.js" type="text/javascript"></script>
     <!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/@tarekraafat/ autocomplete.js@7.2.0/dist/js/autoComplete.min.js"></script>-->
-    <!--<script type="text/javascript" src="arup_lib/autoComplete.js"></script>
-<script src="arup_OppoWizAutocomplete.js" type = "text/javascript" ></script>-->
+    <!--<script type="text/javascript" src="arup_lib/autoComplete.js"></script>-->
+
+<script src="arup_OppoWizAutocomplete.js" type = "text/javascript" ></script>
 <script type="text/javascript">
         $(document).ready(function () {
             //Initialize tooltips
@@ -60,7 +61,7 @@
                         function (errors) {
                             Xrm.Navigation.openErrorDialog({
                                 message: "Correct the form and try again",
-                                details: string.join("\r\n", errors)
+                                // details: (typeof(errors) === "object") ? errors.join("\r\n") : errors
                             });
                         }
                     );
@@ -69,10 +70,12 @@
             );
 
             // Hook up on the fly validation of input fields.
-            var form = document.querySelector("form#page4");
-            Arup.validateOppWiz.addValidationHooks(form);
+            //var form = document.querySelector("form#page4");
+            //Arup.validateOppWiz.addValidationHooks(form);
 
-            arupAutoComplete("WC", "project_name", "Project Name 2", null);
+          //  var validator = new ArupValidateOppoWiz(document, "form#page4");
+
+         //   var projectName = new ArupAutoCompleteField( "WC", "project_name", "Project Name 2",  "ccrm_name", validator,  {  presence: { message: "- a name is required" }  });
 
             $('.multiselect-item .caret-container').click();
 
@@ -218,16 +221,15 @@
                 <br><br>
             </div>
         <form id="page4">
-            <input autocomplete="false" name="hidden" type="text" style="display:none"/>
             <div class="wizard-step" style="display: none;" id="WC_Step">
                 <div class="container" id="WC">
                     <div class="form-group col-lg-6">
                         <label for="project_name">Project Name:</label>
-                        <input id="project_name" class="form-control input-form" name="project_name" type="text" maxlength="200" attrname="name">
+                        <input id="project_name" class="form-control input-form" name="project_name" type="text" maxlength="200" attrname="name" autocomplete="off">
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="project_country">Project Country:</label>
-                        <input list="countries" id="project_country" class="form-control input-form" name="project_country" onkeyup="getCountries(this.value);" onchange="getStates();" title="Input project country" autocomplete="new-password" />
+                        <input list="countries" id="project_country" class="form-control input-form" name="project_country" oninput="getCountries(this.value);" onchange="getStates();" title="Input project country" autocomplete="off" />
                         <datalist id="countries">
                         </datalist>
                     </div>
@@ -247,49 +249,49 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="project_city">Project Town/City:</label>
-                        <input list="cities" id="project_city" class="form-control input-form" name="project_city" title="Input project city" autocomplete="city" />
+                        <input list="cities" id="project_city" class="form-control input-form" name="project_city" title="Input project city" autocomplete="off" />
                         <datalist id="cities">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="arup_business">Arup Business:</label>
-                        <input list="businesses" id="arup_business" class="form-control input-form" name="arup_business" onclick="getBusinesses();" onchange="getSubBusinesses()" title="Input arup business" autocomplete="arup-business" />
+                        <input list="businesses" id="arup_business" class="form-control input-form" name="arup_business" oninput="getBusinesses();" onchange="getSubBusinesses()" title="Input arup business" autocomplete="off" placeholder="Business Area"/>
                         <datalist id="businesses">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="arup_subbusiness">Arup Sub Business:</label>
-                        <input list="subbusinesses" id="arup_subbusiness" class="form-control input-form" name="arup_subbusiness" title="Input arup sub business" autocomplete="new-password" />
+                        <input list="subbusinesses" id="arup_subbusiness" class="form-control input-form" name="arup_subbusiness" title="Input arup sub business" autocomplete="off" placeholder="Business sub-area" />
                         <datalist id="subbusinesses">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="arup_company">Arup Company:</label>
-                        <input list="companies" id="arup_company" class="form-control input-form" name="arup_company" onchange="getAccountingCentres();" title="Input Company" autocomplete="arup-company" />
+                        <input list="companies" id="arup_company" class="form-control input-form" name="arup_company" onchange="getAccountingCentres();" title="Input Company" autocomplete="aoff" />
                         <datalist id="companies">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="accountingcentre">Accounting Centre:</label>
-                        <input list="accountingcentres" id="accountingcentre" class="form-control input-form" name="accountingcentre" title="Input Accounting Centre" />
+                        <input list="accountingcentres" id="accountingcentre" class="form-control input-form" name="accountingcentre" title="Input Accounting Centre" autocomplete="off"/>
                         <datalist id="accountingcentres">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="client">Client:</label>
-                        <input list="clients" id="client" class="form-control input-form" name="client" onkeyup="getClients(this.value, true);" title="Input Client" autocomplete="client" />
+                        <input list="clients" id="client" class="form-control input-form" name="client" oninput="getClients(this.value, true);" title="Input Client" autocomplete="off" placeholder="Client company name" />
                         <datalist id="clients">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="endclient">Ultimate/End Client:</label>
-                        <input list="endclients" id="endclient" class="form-control input-form" name="endclient" onkeyup="getClients(this.value, false);" title="Input End Client" autocomplete="client" />
+                        <input list="endclients" id="endclient" class="form-control input-form" name="endclient" oninput="getClients(this.value, false);" title="Input End Client" autocomplete="off" placeholder =" Ultimate client name"/>
                         <datalist id="endclients">
                         </datalist>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="opporigin">Opportunity Originator:</label>
-                        <input list="users" id="opporigin" class="form-control input-form" name="opporigin" onkeyup="getUsers(this.value);" title="Input Staff name" autocomplete="originator" />
+                        <input list="users" id="opporigin" class="form-control input-form" name="opporigin" onkeyup="getUsers(this.value);" title="Input Staff name" autocomplete="off" placeholder="Arup staff name"/>
                         <datalist id="users">
                         </datalist>
                     </div>
